--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,12 @@ buildNumber.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+!gradle-wrapper.properties
+
 build/
 .gradle/
-/.idea
+/.idea/
 out/
 run/
