--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,11 @@ allprojects {
     configurations {
         compileClasspath // Fabric-loom needs this for remap jar for some reason
     }
+
+    // https://github.com/Carleslc/Simple-YAML
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
 }
 
 subprojects {
