--- a/pressF-bukkit/build.gradle
+++ b/pressF-bukkit/build.gradle
@@ -5,6 +5,8 @@ plugins {
 dependencies {
     implementation project(':pressF-common')
     compileOnly 'com.destroystokyo.paper:paper-api:1.16.4-R0.1-SNAPSHOT'
+    // https://github.com/Carleslc/Simple-YAML
+    implementation 'me.carleslc.Simple-YAML:Simple-Yaml:1.8'
 }
 
 repositories {
