--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 plugins {
     id 'com.github.jlouns.cpe' version '0.5.0'
+    id 'java'
+}
+
+java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
 }
 
 allprojects {
@@ -10,8 +15,8 @@ allprojects {
         compileClasspath // Fabric-loom needs this for remap jar for some reason
     }
 
-    // https://github.com/Carleslc/Simple-YAML
     repositories {
+        // https://github.com/Carleslc/Simple-YAML
         maven { url 'https://jitpack.io' }
     }
 }
@@ -40,7 +45,6 @@ subprojects {
     repositories {
         mavenCentral()
     }
-
 }
 
 def determinePatchVersion() {
