--- a/pressF-bukkit/bin/main/plugin.yml
+++ b/pressF-bukkit/bin/main/plugin.yml
@@ -1,4 +1,4 @@
-main: com.wostenberg.minecraft.pressf.PressFPlugin
+main: com.wostenberg.minecraft.pressf.bukkit.PressFPlugin
 name: pressF
 version: 0.1
 api-version: 1.16
