Implement reload command on fabric

--- a/pressF-fabric/build.gradle
+++ b/pressF-fabric/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 
     Set<String> apiModules = [
             "fabric-api-base",
-            "fabric-entity-events-v1"
+            "fabric-entity-events-v1",
+            "fabric-command-api-v1"
     ]
 
     // Add each module as a dependency
