Add LuckPerms permission nodes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,2 @@
 org.gradle.jvmargs=-Xmx4096M
+luckpermsJarUrl=https://ci.lucko.me/job/LuckPerms/1429/artifact/fabric/build/libs/LuckPerms-Fabric-5.4.21.jar
