--- a/pressF-fabric/build.gradle
+++ b/pressF-fabric/build.gradle
@@ -1,8 +1,12 @@
 import net.fabricmc.loom.task.RemapJarTask
+import de.undercouch.gradle.tasks.download.Download
+import java.io.File
+import java.net.URI
 
 plugins {
     id 'fabric-loom' version '0.10.+'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id 'de.undercouch.download' version '5.0.2'
 }
 
 tasks.withType(JavaCompile) {
@@ -18,6 +22,7 @@ repositories {
             includeGroup('eu.pb4')
         }
     }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     mavenLocal()
 }
 
@@ -26,32 +31,55 @@ configurations {
     implementation.extendsFrom shade
 }
 
+def luckpermsJarLocation = buildDir.toPath().resolve('luckperms').resolve(new File(new URL(project.luckpermsJarUrl).getPath()).getName()).toFile()
+
+task downloadLuckperms(type: Download) {
+    src project.luckpermsJarUrl
+    dest luckpermsJarLocation
+    overwrite false
+}
+
+def fabricApiVersion = '0.51.1+1.18.2'
+
 dependencies {
     // https://modmuss50.me/fabric.html
     minecraft 'com.mojang:minecraft:1.18.2'
     mappings 'net.fabricmc:yarn:1.18.2+build.1:v2'
     modImplementation 'net.fabricmc:fabric-loader:0.13.3'
 
+    // Add each module as a dependency
     Set<String> apiModules = [
-            "fabric-api-base",
-            "fabric-entity-events-v1",
-            "fabric-command-api-v1"
+        "fabric-api-base",
+        "fabric-entity-events-v1",
+        "fabric-command-api-v1"
     ]
 
-    // Add each module as a dependency
     apiModules.forEach {
-        modImplementation(fabricApi.module(it, '0.46.4+1.18'))
+        modImplementation(fabricApi.module(it, fabricApiVersion))
     }
 
-    // include(modImplementation('me.lucko:fabric-permissions-api:0.1-SNAPSHOT'))
+    // fabric modules required only by luckperms to run at dev time but aren't a direct dependency of ours
+    Set<String> luckpermsRuntimeModules = [
+        "fabric-lifecycle-events-v1",
+        "fabric-networking-v0"
+    ]
 
-    modImplementation('eu.pb4:placeholder-api:1.1.1+1.17.1')
+    luckpermsRuntimeModules.forEach {
+        modRuntimeOnly(fabricApi.module(it, fabricApiVersion))
+    }
+
+    include(modImplementation('me.lucko:fabric-permissions-api:0.1-SNAPSHOT'))
+
+    // Comment this line out to launch without LuckPerms on the dev server
+//    modRuntimeOnly(files(luckpermsJarLocation))
 
     // https://github.com/Carleslc/Simple-YAML
     implementation 'me.carleslc.Simple-YAML:Simple-Yaml:1.8'
 
     shade project(':pressF-common')
 }
+
+compileJava.dependsOn(downloadLuckperms)
 
 processResources {
     inputs.property 'version', project.version
